--- a/src/app/utility/table/table.component.html
+++ b/src/app/utility/table/table.component.html
@@ -85,23 +85,7 @@
           (change)="intervalChange()"
         >
           <mat-radio-button value="monthly">Monthly</mat-radio-button>
-          <mat-radio-button value="daily">daily</mat-radio-button>
           <mat-radio-button value="weekly">Weekly</mat-radio-button>
-        </mat-radio-group>
-      </span>
-
-      <span *ngIf="treasury_Yield" class="ms-sm-5">
-        <strong>Duration:</strong>
-        <mat-radio-group
-          [(ngModel)]="selectedMaturityTreasury"
-          (change)="intervalChange()"
-        >
-          <mat-radio-button value="3month">3 Month</mat-radio-button>
-          <mat-radio-button value="2year">2 Year</mat-radio-button>
-          <mat-radio-button value="5year">5 Year</mat-radio-button>
-          <mat-radio-button value="7year">7 Year</mat-radio-button>
-          <mat-radio-button value="10year">10 Year</mat-radio-button>
-          <mat-radio-button value="30year">30 Year</mat-radio-button>
         </mat-radio-group>
       </span>
     </div>
@@ -133,7 +117,7 @@
     <div class="col-md-6 border">
       <div class="notes explanaion">
         <p *ngIf="realGDP">
-          <strong>Details: </strong>The graph's illustrates the annual and
+          <strong>Details: </strong>The Charts illustrates the annual and
           quarterly real GDP of the United States.
           <br />
 
@@ -142,7 +126,7 @@
           Louis.
         </p>
         <p *ngIf="realGDPperCapita">
-          <strong>Details: </strong>The graphs illustrates the quarterly Real
+          <strong>Details: </strong>The Charts illustrates the quarterly Real
           GDP per Capita data of the United States.
           <br />
           <strong>Source:</strong> U.S. Bureau of Economic Analysis, Real gross
@@ -150,9 +134,8 @@
           of St. Louis.
         </p>
         <p *ngIf="treasury_Yield">
-          <strong>Details: </strong>This API returns the daily, weekly, and
-          monthly US treasury yield of a given maturity timeline (e.g., 5 year,
-          30 year, etc).
+          <strong>Details: </strong>The Charts illustrates explains the daily,
+          weekly.
           <br />
           <strong>Source:</strong> Board of Governors of the Federal Reserve
           System (US), Market Yield on U.S. Treasury Securities at 3-month,
@@ -161,8 +144,8 @@
           Bank of St. Louis.
         </p>
         <p *ngIf="federalFundsRate">
-          <strong>Details: </strong> This API returns the daily, weekly, and
-          monthly federal funds rate (interest rate) of the United States.
+          <strong>Details: </strong> The Charts illustrates the daily, weekly,
+          and monthly federal funds rate (interest rate) of the United States.
 
           <br />
           <strong>Source:</strong>Board of Governors of the Federal Reserve
@@ -175,9 +158,10 @@
           ).
         </p>
         <p *ngIf="cpi">
-          <strong>Details: </strong> This API returns the monthly and semiannual
-          consumer price index (CPI) of the United States. CPI is widely
-          regarded as the barometer of inflation levels in the broader economy.
+          <strong>Details: </strong> The Charts illustrates the monthly and
+          semiannual consumer price index (CPI) of the United States. CPI is
+          widely regarded as the barometer of inflation levels in the broader
+          economy.
 
           <br />
           <strong>Source:</strong>U.S. Bureau of Labor Statistics, Consumer
@@ -185,16 +169,16 @@
           retrieved from FRED, Federal Reserve Bank of St. Louis.
         </p>
         <p *ngIf="inflation">
-          <strong>Details: </strong> This API returns the annual inflation rates
-          (consumer prices) of the United States.
+          <strong>Details: </strong> The Charts illustrates the annual inflation
+          rates (consumer prices) of the United States.
 
           <br />
           <strong>Source:</strong>World Bank, Inflation, consumer prices for the
           United States, retrieved from FRED, Federal Reserve Bank of St. Louis.
         </p>
         <p *ngIf="retailSales">
-          <strong>Details: </strong> This API returns the monthly Advance Retail
-          Sales: Retail Trade data of the United States.
+          <strong>Details: </strong> The Charts illustrates the monthly Advance
+          Retail Sales: Retail Trade data of the United States.
 
           <br />
           <strong>Source:</strong>U.S. Census Bureau, Advance Retail Sales:
@@ -205,13 +189,16 @@
           ).
         </p>
         <p *ngIf="unemploymentRate">
-          <strong>Details: </strong> This API returns the monthly unemployment
-          data of the United States. The unemployment rate represents the number
-          of unemployed as a percentage of the labor force. Labor force data are
-          restricted to people 16 years of age and older, who currently reside
-          in 1 of the 50 states or the District of Columbia, who do not reside
-          in institutions, and who are not on active duty in the Armed Forces
-          (<a href="https://fred.stlouisfed.org/series/UNRATE" target="_blank">
+          <strong>Details: </strong> The Charts illustrates the monthly
+          unemployment data of the United States. The unemployment rate
+          represents the number of unemployed as a percentage of the labor
+          force. Labor force data are restricted to people 16 years of age and
+          older, who currently reside in 1 of the 50 states or the District of
+          Columbia, who do not reside in institutions, and who are not on active
+          duty in the Armed Forces (<a
+            href="https://fred.stlouisfed.org/series/UNRATE"
+            target="_blank"
+          >
             source</a
           >
           ).
@@ -220,7 +207,7 @@
           Rate, retrieved from FRED, Federal Reserve Bank of St. Louis.
         </p>
         <p *ngIf="nonFormPayroll">
-          <strong>Details: </strong> This API returns the monthly US All
+          <strong>Details: </strong> The Charts illustrates the monthly US All
           Employees: Total Nonfarm (commonly known as Total Nonfarm Payroll), a
           measure of the number of U.S. workers in the economy that excludes
           proprietors, private household employees, unpaid volunteers, farm
